--- a/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
+++ b/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
@@ -1,17 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Implementations\" />
-    <Folder Include="Models\" />
-    <Folder Include="Utilities\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="DTOs\" />
+		<Folder Include="Interfaces\" />
+		<Folder Include="Implementations\" />
+		<Folder Include="Models\" />
+		<Folder Include="Extensions\" />
+		<Folder Include="Utilities\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+	</ItemGroup>
 
 </Project>
