--- a/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
+++ b/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Zarinpal.AspNetCore\Zarinpal.AspNetCore.csproj" />
+  </ItemGroup>
+
 </Project>
