--- a/samples/Zarinpal.AspNetCore.Sample/appsettings.json
+++ b/samples/Zarinpal.AspNetCore.Sample/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Zarinpal": {
+    "MerchantId": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx",
+    "ZarinpalMode": "Original" // Original - Sandbox
+  }
 }
