--- a/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
+++ b/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Zarinpal.AspNetCore\Zarinpal.AspNetCore.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\src\Zarinpal.AspNetCore\Zarinpal.AspNetCore.csproj" />
+	</ItemGroup>
 
 </Project>
