--- a/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
+++ b/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
@@ -4,10 +4,17 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<Version>1.0.0</Version>
+		<PackageId>Zarinpal.AspNetCore</PackageId>
+		<Description>Asp.Net Core Zarinpal Payment Gateway Package</Description>
+		<RepositoryUrl>https://github.com/MehdiMst00/Zarinpal.AspNetCore</RepositoryUrl>
+		<PackageTags>asp.net core zarinpal;zarinpal;</PackageTags>
+		<Authors>MehdiMst00</Authors>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="DTOs\" />
+		<Folder Include="DTOs\Sandbox\" />
 		<Folder Include="Interfaces\" />
 		<Folder Include="Implementations\" />
 		<Folder Include="Models\" />
