--- a/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
+++ b/samples/Zarinpal.AspNetCore.Sample/Zarinpal.AspNetCore.Sample.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\..\src\Zarinpal.AspNetCore\Zarinpal.AspNetCore.csproj" />
 	</ItemGroup>
 
