--- a/samples/Zarinpal.AspNetCore.Sample/appsettings.json
+++ b/samples/Zarinpal.AspNetCore.Sample/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Zarinpal": {
     "MerchantId": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx",
-    "ZarinpalMode": "Original" // Original - Sandbox
+    "ZarinpalMode": "Sandbox", // Original - Sandbox
+    "UseAdvanced": true
   }
 }
