--- a/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
+++ b/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>2.0.0</Version>
+		<Version>3.0.0</Version>
 		<PackageId>Zarinpal.AspNetCore</PackageId>
 		<Description>Asp.Net Core Zarinpal Payment Gateway Package</Description>
 		<RepositoryUrl>https://github.com/MehdiMst00/Zarinpal.AspNetCore</RepositoryUrl>
@@ -12,19 +12,19 @@
 		<Authors>MehdiMst00</Authors>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://www.nuget.org/packages/Zarinpal.AspNetCore</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Interfaces\" />
-		<Folder Include="Models\" />
-		<Folder Include="Utilities\" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
