--- a/samples/Zarinpal.AspNetCore.Sample/appsettings.json
+++ b/samples/Zarinpal.AspNetCore.Sample/appsettings.json
@@ -9,6 +9,7 @@
   "Zarinpal": {
     "MerchantId": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx",
     "ZarinpalMode": "Sandbox", // Original - Sandbox
+    "Currency": "IRT", // IRR - IRT
     "UseAdvanced": true
   }
 }
