--- a/samples/Zarinpal.AspNetCore.Sample/appsettings.json
+++ b/samples/Zarinpal.AspNetCore.Sample/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Zarinpal": {
-    "MerchantId": "41c2e177-2e5a-4f37-8cef-569f2b48bdcf",
-    "ZarinpalMode": "Original", // Original - Sandbox
+    "MerchantId": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx",
+    "ZarinpalMode": "Sandbox", // Original - Sandbox
     "Currency": "IRT", // IRR - IRT
     "UseAdvanced": true
   }
