Modify target frameworks (multi-targeting), support net8.0,.net9.0,.net10.0 + Fix sandbox issue + Some refactor and cleanup

--- a/samples/Zarinpal.AspNetCore.Sample/appsettings.json
+++ b/samples/Zarinpal.AspNetCore.Sample/appsettings.json
@@ -9,7 +9,6 @@
   "Zarinpal": {
     "MerchantId": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx",
     "ZarinpalMode": "Sandbox", // Original - Sandbox
-    "Currency": "IRT", // IRR - IRT
-    "UseAdvanced": true
+    "Currency": "IRT" // IRR - IRT
   }
 }
