--- a/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
+++ b/src/Zarinpal.AspNetCore/Zarinpal.AspNetCore.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>3.1.0</Version>
+		<Version>4.0.0</Version>
 		<PackageId>Zarinpal.AspNetCore</PackageId>
 		<Description>Asp.Net Core Zarinpal Payment Gateway Package</Description>
 		<RepositoryUrl>https://github.com/MehdiMst00/Zarinpal.AspNetCore</RepositoryUrl>
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
+		<PackageReference Include="Polly" Version="8.6.5" />
 	</ItemGroup>
 
 </Project>
